@@ -4,6 +4,7 @@
  */
 package com.sos.mabs.fso.grh.jsfUtil;
 
+import com.sos.mabs.fso.grh.ejb.CadreFacade;
 import com.sos.mabs.fso.grh.ejb.PersonneFacade;
 import com.sos.mabs.fso.grh.entities.Cadre;
 import com.sos.mabs.fso.grh.jsf.PersonneController;
@@ -21,26 +22,17 @@ public class CadreConverter implements Converter{
 
     @Override
     public Object getAsObject(FacesContext context, UIComponent component, String value) {
-        if (value == null || value.length() == 0) {
-            return null;
-        }
-        Integer id = new Integer(value);
-        PersonneFacade controller = (PersonneFacade) context.getApplication()
-                .getELResolver().getValue(context.getELContext(), null, "cadre");
-        return controller.find(id);
+        Integer id = Integer.valueOf(value);
+        PersonneController controller = new PersonneController();
+        Cadre cadre =  controller.getCadreFacade().find(id);
+        return cadre;
     }
 
     @Override
     public String getAsString(FacesContext context, UIComponent component, Object value) {
-        if(value == null){
-            return null;
-        }
-        if(value instanceof Cadre){
-            Cadre o = (Cadre) value;
-            return o.getIdCadre() == null ? "" : o.getIdCadre().toString();
-        }else{
-            throw new IllegalArgumentException("object" + value + "is of type" + value.getClass().getName() + "; expected type : Cadre");
-        }
+        Cadre cadre = (Cadre) value;
+        String idAsString = String.valueOf(cadre.getIdCadre());
+        return idAsString;
     }
     
 }
